pamc/src/tests/sample_code/should_fail/single_file/ast_simplification/labeled_params/duplicate_labels/explicit.ph
type Nat {
    .O: Nat,
    .S(n: Nat): Nat,
}

let f = fun _(X~x: Nat, X~y: Nat): Nat {
    Nat.O
};
